@@ -1,3 +1,8 @@
+2008-03-01  kitone  <kitone@gna.org>
+
+	* src/Document.cc:
+	Small fix (finish_command)
+
 2008-02-13  kitone  <kitone@gna.org>
 
 	* TODO:
